Fixed slider alignment
Slider is now aligned to div from main.css

--- a/Resources/CSS/main.css
+++ b/Resources/CSS/main.css
@@ -82,6 +82,12 @@ body{
     overflow: hidden;
 }
 
+    ul#bxslider {
+        margin: 180px;
+        padding: 0px;
+    }
+
+
 
 /* Social icons */
 #Social{
