--- a/Resources/Slider/jquery.bxslider.css
+++ b/Resources/Slider/jquery.bxslider.css
@@ -26,6 +26,10 @@
 	display: block;
 }
 
+ul{
+    margin: 0px;
+}
+
 /** THEME
 ===================================*/
 
@@ -33,8 +37,9 @@
 	-moz-box-shadow: 0 0 5px #ccc;
 	-webkit-box-shadow: 0 0 5px #ccc;
 	box-shadow: 0 0 5px #ccc;
-	border:  5px solid #fff;
-	left: -5px;
+	border:  5px solid black;
+	border-top: 0px;                   /* Vexxie edit: fixes top misalignment from slider */
+    left: -5px;
 	background: #fff;
 	
 	/*fix other elements on the page moving (on Chrome)*/
@@ -48,7 +53,7 @@
 .bx-wrapper .bx-pager,
 .bx-wrapper .bx-controls-auto {
 	position: absolute;
-	bottom: -10px;
+	bottom: 5px;
 	width: 100%;
 }
 
